--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
                     </div>
                 </div>
                 
-                <div class="col-8 col-sm-6 col-lg-5 position-relative mx-auto">
+                <!-- <div class="col-8 col-sm-6 col-lg-5 position-relative mx-auto">
                     <img src="assets/img/cognicare.gif" alt="Bottle Label" class="img-fluid" loading="lazy" width="526" height="526">
 
                     <div class="modal-label">
@@ -329,7 +329,7 @@
                             </picture> 
                         </div>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
     </section>
