Add hidden pricing

--- a/VSL-VEX/index.html
+++ b/VSL-VEX/index.html
@@ -113,7 +113,7 @@
     </div>
     <div id="pricing-section" class="component-section">
         <!-- hidden is the classe hiding this content -->
-        <div class="pricing-content">
+        <div class="pricing-content hidden">
             <div class="pricing-options flex flex-row gap-4 sm:flex-col">
                 <div class="pricing-col best-value">
                     <div class="col-header">BEST VALUE</div>
