--- a/VSL-VEX/index.html
+++ b/VSL-VEX/index.html
@@ -101,6 +101,7 @@
     <!-- <link rel="stylesheet" href="../style.css"> -->
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
+    <script type="text/javascript" src="https://assets.mycartpanda.com/cartx-ecomm-ui-assets/js/cpsales.js"></script>
 </head>
 
 <body>
