feat: Change link for products

--- a/VSL-VEX/index.html
+++ b/VSL-VEX/index.html
@@ -101,7 +101,6 @@
     <!-- <link rel="stylesheet" href="../style.css"> -->
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
-    <script type="text/javascript" src="https://assets.mycartpanda.com/cartx-ecomm-ui-assets/js/cpsales.js"></script>
 </head>
 
 <body>
@@ -166,7 +165,7 @@
                   </div>
               </div>
               <div class="mt-6">
-                  <button style="background: linear-gradient(360deg, rgba(218, 218, 218, 1) 50%, rgba(224, 224, 224, 1) 51%);" class="w-full font-bold py-3 lg:py-4 rounded-lg text-lg lg:text-xl hover:bg-gray-400 transition-colors">BUY NOW</button>
+                  <a href="https://vexacaps.com/checkout/191527168:1" style="background: linear-gradient(360deg, rgba(218, 218, 218, 1) 50%, rgba(224, 224, 224, 1) 51%);" class="w-full font-bold py-3 lg:py-4 rounded-lg text-lg lg:text-xl hover:bg-gray-400 transition-colors">BUY NOW</a>
                   <div class="hidden md:flex justify-center items-center mt-3 space-x-2">
                       <img src="../card-flags.webp" style="width: 60%; max-width: 391px;" alt="Visa">
                   </div>
@@ -227,7 +226,7 @@
                   </div>
               </div>
               <div class="mt-6">
-                  <button class="w-full bg-green-500 text-white font-bold py-3 lg:py-4 rounded-lg text-lg lg:text-xl hover:bg-green-600 transition-colors shadow-lg">BUY NOW</button>
+                  <a href="https://vexacaps.com/checkout/191527170:1" class="w-full bg-green-500 text-white font-bold py-3 lg:py-4 rounded-lg text-lg lg:text-xl hover:bg-green-600 transition-colors shadow-lg">BUY NOW</a>
                   <div class="hidden md:flex justify-center items-center mt-3 space-x-2">
                       <img src="../card-flags.webp" style="width: 60%; max-width: 391px;" alt="Visa">
                   </div>
@@ -284,7 +283,7 @@
                   </div>
               </div>
               <div class="mt-6">
-                  <button style="background: linear-gradient(360deg, rgba(218, 218, 218, 1) 50%, rgba(224, 224, 224, 1) 51%);" class="w-full font-bold py-3 lg:py-4 rounded-lg text-lg lg:text-xl hover:bg-gray-400 transition-colors">BUY NOW</button>
+                  <a href="https://vexacaps.com/checkout/191527169:1" style="background: linear-gradient(360deg, rgba(218, 218, 218, 1) 50%, rgba(224, 224, 224, 1) 51%);" class="w-full font-bold py-3 lg:py-4 rounded-lg text-lg lg:text-xl hover:bg-gray-400 transition-colors">BUY NOW</a>
                   <div class="hidden md:flex justify-center items-center mt-3 space-x-2">
                       <img src="../card-flags.webp" style="width: 60%; max-width: 391px;" alt="Visa">
                   </div>
