feat: Add bottles

--- a/VSL-VEX/index.html
+++ b/VSL-VEX/index.html
@@ -165,7 +165,7 @@
                   </div>
               </div>
               <div class="mt-6">
-                  <a href="https://vexacaps.com/checkout/191527168:1" style="background: linear-gradient(360deg, rgba(218, 218, 218, 1) 50%, rgba(224, 224, 224, 1) 51%);" class="w-full font-bold py-3 lg:py-4 rounded-lg text-lg lg:text-xl hover:bg-gray-400 transition-colors">BUY NOW</a>
+                  <a href="https://trk.meltrify.com/click/1" style="background: linear-gradient(360deg, rgba(218, 218, 218, 1) 50%, rgba(224, 224, 224, 1) 51%);" class="w-full font-bold py-3 lg:py-4 rounded-lg text-lg lg:text-xl hover:bg-gray-400 transition-colors">BUY NOW</a>
                   <div class="hidden md:flex justify-center items-center mt-3 space-x-2">
                       <img src="../card-flags.webp" style="width: 60%; max-width: 391px;" alt="Visa">
                   </div>
@@ -226,7 +226,7 @@
                   </div>
               </div>
               <div class="mt-6">
-                  <a href="https://vexacaps.com/checkout/191527170:1" class="w-full bg-green-500 text-white font-bold py-3 lg:py-4 rounded-lg text-lg lg:text-xl hover:bg-green-600 transition-colors shadow-lg">BUY NOW</a>
+                  <a href="https://trk.meltrify.com/click/3" class="w-full bg-green-500 text-white font-bold py-3 lg:py-4 rounded-lg text-lg lg:text-xl hover:bg-green-600 transition-colors shadow-lg">BUY NOW</a>
                   <div class="hidden md:flex justify-center items-center mt-3 space-x-2">
                       <img src="../card-flags.webp" style="width: 60%; max-width: 391px;" alt="Visa">
                   </div>
@@ -283,7 +283,7 @@
                   </div>
               </div>
               <div class="mt-6">
-                  <a href="https://vexacaps.com/checkout/191527169:1" style="background: linear-gradient(360deg, rgba(218, 218, 218, 1) 50%, rgba(224, 224, 224, 1) 51%);" class="w-full font-bold py-3 lg:py-4 rounded-lg text-lg lg:text-xl hover:bg-gray-400 transition-colors">BUY NOW</a>
+                  <a href="https://trk.meltrify.com/click/2" style="background: linear-gradient(360deg, rgba(218, 218, 218, 1) 50%, rgba(224, 224, 224, 1) 51%);" class="w-full font-bold py-3 lg:py-4 rounded-lg text-lg lg:text-xl hover:bg-gray-400 transition-colors">BUY NOW</a>
                   <div class="hidden md:flex justify-center items-center mt-3 space-x-2">
                       <img src="../card-flags.webp" style="width: 60%; max-width: 391px;" alt="Visa">
                   </div>
