--- a/pricing.html
+++ b/pricing.html
@@ -55,8 +55,8 @@
                         </ul>
                     </div>
                 </div>
-                <div class="mt-6">
-                    <button style="background: linear-gradient(360deg, rgba(218, 218, 218, 1) 50%, rgba(224, 224, 224, 1) 51%);" class="w-full font-bold py-3 lg:py-4 rounded-lg text-lg lg:text-xl hover:bg-gray-400 transition-colors">BUY NOW</button>
+                <div class="mt-6 w-full">
+                    <button style="background: linear-gradient(360deg, rgba(218, 218, 218, 1) 50%, rgba(224, 224, 224, 1) 51%); width: 100%;" class="font-bold py-3 lg:py-4 rounded-lg text-lg lg:text-xl hover:bg-gray-400 transition-colors">BUY NOW</button>
                     <div class="hidden md:flex justify-center items-center mt-3 space-x-2">
                         <img src="card-flags.webp" style="width: 60%; max-width: 391px;" alt="Visa">
                     </div>
@@ -116,8 +116,8 @@
                         </ul>
                     </div>
                 </div>
-                <div class="mt-6">
-                    <button class="w-full bg-green-500 text-white font-bold py-3 lg:py-4 rounded-lg text-lg lg:text-xl hover:bg-green-600 transition-colors shadow-lg">BUY NOW</button>
+                <div class="mt-6 w-full">
+                    <button class="w-full bg-green-500 text-white font-bold py-3 lg:py-4 rounded-lg text-lg lg:text-xl hover:bg-green-600 transition-colors shadow-lg" style="width: 100%;">BUY NOW</button>
                     <div class="hidden md:flex justify-center items-center mt-3 space-x-2">
                         <img src="card-flags.webp" style="width: 60%; max-width: 391px;" alt="Visa">
                     </div>
@@ -173,8 +173,8 @@
                         </ul>
                     </div>
                 </div>
-                <div class="mt-6">
-                    <button style="background: linear-gradient(360deg, rgba(218, 218, 218, 1) 50%, rgba(224, 224, 224, 1) 51%);" class="w-full font-bold py-3 lg:py-4 rounded-lg text-lg lg:text-xl hover:bg-gray-400 transition-colors">BUY NOW</button>
+                <div class="mt-6 w-full">
+                    <button style="background: linear-gradient(360deg, rgba(218, 218, 218, 1) 50%, rgba(224, 224, 224, 1) 51%); width: 100%;" class="font-bold py-3 lg:py-4 rounded-lg text-lg lg:text-xl hover:bg-gray-400 transition-colors">BUY NOW</button>
                     <div class="hidden md:flex justify-center items-center mt-3 space-x-2">
                         <img src="card-flags.webp" style="width: 60%; max-width: 391px;" alt="Visa">
                     </div>
