--- a/vsl/index.html
+++ b/vsl/index.html
@@ -854,13 +854,13 @@
     <!-- FOOTER -->
     <footer>
         <div class="footer-links">
-            <a href="privacy.html">Privacy</a>
+            <a href="../prostavax/privacy.html">Privacy</a>
             <span class="divider">|</span>
-            <a href="terms.html">Terms and Conditions</a>
+            <a href="../prostavax/terms.html">Terms and Conditions</a>
             <span class="divider">|</span>
-            <a href="disclaimer.html">Disclaimer</a>
+            <a href="../prostavax/disclaimer.html">Disclaimer</a>
             <span class="divider">|</span>
-            <a href="contact.html">Contact</a>
+            <a href="../prostavax/contact.html">Contact</a>
         </div>
 
         <div class="footer-copyright">
